discussion/kv_engine/184967/184967_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54850: Skip magma key-lookup optimization if Disk snap is Historical

Change-Id: I453339fd9dcbe9cbd4dcd8f4c54a18cd8543d5ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2023-01-18 10:27:36.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-18 10:27:49.000000000
Message: 
Patch Set 5: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/333031/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-18 11:02:13.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/863/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_utils.h:64:9: error: unknown type name "CollectionID" [clang-diagnostic-error]
        CollectionID cid);
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/863/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_utils.h:64:9:
error: unknown type name "CollectionID" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/863/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1156/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2328 Test failed: `" (Expected `287539" to be less than or equal to `278528" - Unexpected fileSize for vbucket)
[2023-01-18T10:41:09.878Z] (245 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1156/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/855/ : FAILURE

Compile error at [2023-01-18T10:37:24.214Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/mutation_log.cc:13:10:
fatal error: "platform/crc32c.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/855/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22265/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1042/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/834/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/869/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/876/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/884/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/874/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/883/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
